styles.css
ul,
h1,
h2 {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
}

header {
    display: flex;
    justify-content: space-between;
}

.header-links ul {
    display: flex;
}

.s1 {
    display: flex;
    align-items: center;
}

.s2-title {
    text-align: center;
}

.s2-content {
    display: flex;
}

